Suppress the keyboard and AUX interrupts during sending PS/2 active multiplexing activation sequence. This prevent from IRQ storm on some controllers. Fixes #7635.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42323 a95241bf-73f2-0310-859d-f6bbb57e9c96